memo/memo-with-references/tests/6-expected-just-single-ident.stderr
error: expected just a single ident
 --> tests/6-expected-just-single-ident.rs:3:8
  |
3 | #[memo(cache other)]
  |        ^^^^^^^^^^^
