memo/memo-with-references/tests/6-expected-just-single-ident.rs
use memo_with_references::memo;

#[memo(cache other)]
fn memome(cache: &'a str) {}

fn main() {}
